[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["nebularazer <nebularazer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
sanic = "^21.12.1"
httpx = "^0.22.0"
uvloop = "^0.16.0"
aiolimiter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
